Add OMERO annotation workflows and training scripts
- Created `omero-annotate-ai-from-yaml.py` for annotation workflow using YAML configuration.
- Developed `omero-idr-demo.py` for annotation and training with IDR public data.
- Introduced `omero-training-microsam.py` for training micro-SAM models from OMERO data.
- Updated `pixi.lock` and `pyproject.toml` to version 0.2.2 for `omero-annotate-ai`.
- Enhanced `TrainingDataWidget` to update table dropdown options outside the output context.

--- a/notebooks/jupyter/other/cleanup_annotations.ipynb
+++ b/notebooks/jupyter/other/cleanup_annotations.ipynb
@@ -5,9 +5,7 @@
    "id": "360bd395",
    "metadata": {},
    "source": [
-    "# Clean Up Annotations from OMERO Project\n",
-    "\n",
-    "This notebook demonstrates how to clean up annotations from an OMERO project using the omero-annotate-ai package."
+    "# Clean Up Annotations from OMERO Project\n\nThis notebook demonstrates how to clean up annotations from an OMERO project using the omero-annotate-ai package."
    ]
   },
   {
@@ -28,9 +26,7 @@
    "id": "w5l65m8rvi",
    "metadata": {},
    "source": [
-    "## Step 1: Connect to OMERO\n",
-    "\n",
-    "First, establish a connection to your OMERO server."
+    "## Step 1: Connect to OMERO\n\nFirst, establish a connection to your OMERO server."
    ]
   },
   {
@@ -53,9 +49,7 @@
    "id": "pmtgkcnc3y9",
    "metadata": {},
    "source": [
-    "## Step 2: List Annotation Tables\n",
-    "\n",
-    "View all annotation tables in your chosen container."
+    "## Step 2: List Annotation Tables\n\nView all annotation tables in your chosen container."
    ]
   },
   {
@@ -84,9 +78,7 @@
    "id": "pn3dhbt3kp",
    "metadata": {},
    "source": [
-    "## Step 4: Delete Annotation Tables\n",
-    "\n",
-    "Remove specific annotation tables by their ID."
+    "## Step 3: Delete Annotation Tables\n\nRemove specific annotation tables by their ID."
    ]
   },
   {
@@ -104,9 +96,9 @@
     "success = delete_table(conn, table_id_to_delete)\n",
     "\n",
     "if success:\n",
-    "    print(\"✅ Annotation table deleted successfully\")\n",
+    "    print(\"\u2705 Annotation table deleted successfully\")\n",
     "else:\n",
-    "    print(\"❌ Failed to delete annotation table\")"
+    "    print(\"\u274c Failed to delete annotation table\")"
    ]
   },
   {
@@ -114,9 +106,7 @@
    "id": "ijkbyknjk0a",
    "metadata": {},
    "source": [
-    "## Step 5: Bulk Cleanup (Optional)\n",
-    "\n",
-    "For cleaning up multiple annotation tables at once."
+    "## Step 4: Bulk Cleanup (Optional)\n\nFor cleaning up multiple annotation tables at once."
    ]
   },
   {
@@ -135,10 +125,10 @@
     "for table_id in table_ids_to_delete:\n",
     "    success = delete_table(conn, table_id)\n",
     "    if success:\n",
-    "        print(f\"✅ Deleted table {table_id}\")\n",
+    "        print(f\"\u2705 Deleted table {table_id}\")\n",
     "        deleted_count += 1\n",
     "    else:\n",
-    "        print(f\"❌ Failed to delete table {table_id}\")\n",
+    "        print(f\"\u274c Failed to delete table {table_id}\")\n",
     "\n",
     "print(f\"\\nCleanup complete: {deleted_count}/{len(table_ids_to_delete)} tables deleted\")"
    ]
@@ -148,9 +138,7 @@
    "id": "mcv955qgjoe",
    "metadata": {},
    "source": [
-    "## Step 6: Complete Project Cleanup (Optional)\n",
-    "\n",
-    "Use the cleanup function to remove all omero-annotate-ai annotations from a project."
+    "## Step 5: Complete Project Cleanup (Optional)\n\nUse the cleanup function to remove all omero-annotate-ai annotations from a project."
    ]
   },
   {
@@ -169,10 +157,10 @@
     "# trainingset_name = \"my_training_set\"  # Uncomment and set if needed\n",
     "trainingset_name = None  # Clean up all annotations\n",
     "\n",
-    "print(f\"🧹 Starting cleanup of project {project_id}...\")\n",
+    "print(f\"\ud83e\uddf9 Starting cleanup of project {project_id}...\")\n",
     "results = cleanup_project_annotations(conn, project_id, trainingset_name)\n",
     "\n",
-    "print(f\"\\n📊 Cleanup Results:\")\n",
+    "print(f\"\\n\ud83d\udcca Cleanup Results:\")\n",
     "print(f\"   Tables deleted: {results['tables']}\")\n",
     "print(f\"   ROIs deleted: {results['rois']}\")\n",
     "print(f\"   Map annotations deleted: {results['map_annotations']}\")\n",
