--- a/notebooks/jupyter/training/omero-training-microsam.ipynb
+++ b/notebooks/jupyter/training/omero-training-microsam.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ✨ Setup training configuration using convenience function\n",
+    "# \u2728 Setup training configuration using convenience function\n",
     "training_config = setup_training(\n",
     "    training_result,\n",
     "    model_name=f\"{selected_table_info.get('name', 'micro_sam_training')}_{timestamp}\",\n",
@@ -222,12 +222,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ✨ Execute training with convenience function\n",
+    "# \u2728 Execute training with convenience function\n",
     "print(\"Starting micro-SAM training...\")\n",
     "\n",
     "training_results = run_training(training_config, framework=\"microsam\")\n",
     "\n",
-    "print(f'🎉 Training completed successfully!')\n",
+    "print(f'\ud83c\udf89 Training completed successfully!')\n",
     "print(f'Training Results:')\n",
     "print(f'  Model name: {training_results[\"model_name\"]}')\n",
     "print(f'  Final model: {training_results.get(\"final_model_path\", \"Not available\")}')\n",
@@ -248,8 +248,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the best checkpoint\n",
-    "checkpoints = list(checkpoint_folder.glob(\"*.pt\"))\n",
+    "# Find the best checkpoint from training results\n",
+    "checkpoint_folder = Path(training_results.get(\"output_dir\", output_directory)) / \"checkpoints\"\n",
+    "model_name = training_config[\"model_name\"]\n",
+    "\n",
+    "checkpoints = list(checkpoint_folder.glob(\"*.pt\")) if checkpoint_folder.exists() else []\n",
     "if checkpoints:\n",
     "    latest_checkpoint = sorted(checkpoints)[-1]\n",
     "    print(f\"Latest checkpoint: {latest_checkpoint}\")\n",
@@ -263,7 +266,6 @@
     "print(f\"\\nTraining summary:\")\n",
     "print(f\"  Output directory: {output_directory}\")\n",
     "print(f\"  Model name: {model_name}\")\n",
-    "print(f\"  Training completed with {n_iterations} iterations\")\n",
     "print(f\"  Dataset statistics: {training_result['stats']}\")"
    ]
   },
@@ -273,47 +275,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from typing import Union\n",
     "from micro_sam.bioimageio.model_export import export_sam_model\n",
-    "import os\n",
-    "from tifffile import imread\n",
     "import imageio.v3 as imageio\n",
-    "import micro_sam.util as util\n",
-    "from micro_sam.bioimageio.model_export import _create_test_inputs_and_outputs\n",
+    "import numpy as np\n",
+    "import os\n",
     "\n",
-    "# Get a test image and label to use for exporting\n",
-    "# For this example, we'll use the first image and label from validation set\n",
-    "test_image_path = os.path.join(\"D:\\\\Maarten\\\\Data\\\\HR_sensor\\\\micro-sam-20250829_134050\\\\val_input\", os.listdir(\"D:\\\\Maarten\\\\Data\\\\HR_sensor\\\\micro-sam-20250829_134050\\\\val_input\")[0])\n",
-    "test_label_path = os.path.join(\"D:\\\\Maarten\\\\Data\\\\HR_sensor\\\\micro-sam-20250829_134050\\\\val_label\", os.listdir(\"D:\\\\Maarten\\\\Data\\\\HR_sensor\\\\micro-sam-20250829_134050\\\\val_label\")[0])\n",
-    "output_directory = \"D:\\\\Maarten\\\\Data\\\\HR_sensor\\\\micro-sam-20250829_134050\"\n",
-    "# Load the test image and label\n",
-    "test_image = imageio.imread(test_image_path)\n",
-    "test_label = np.array(imread(test_label_path))\n",
-    "model_type=\"vit_b\"\n",
-    "checkpoint_name = \"micro_sam_training_20250829_135659\"\n",
-    "# Define the path for saving the bioimage.io model\n",
-    "bioimageio_model_path = os.path.join(output_directory, \"bioimage_io_model\")\n",
-    "#os.makedirs(bioimageio_model_path, exist_ok=True)\n",
+    "# Use the validation data from the training preparation\n",
+    "val_input_path = training_result[\"val_input\"]\n",
+    "val_label_path = training_result[\"val_label\"]\n",
     "\n",
-    "# Export the SAM model to bioimage.io format\n",
-    "export_sam_model(\n",
-    "    image=test_image,\n",
-    "    label_image=test_label,\n",
-    "    model_type=model_type,  # Using the same model_type as in training\n",
-    "    name=f\"micro_sam_test\",\n",
-    "    output_path=bioimageio_model_path,\n",
-    "    checkpoint_path=os.path.join(\n",
-    "        output_directory, \"checkpoints\", checkpoint_name, \"best.pt\"\n",
-    "    ),\n",
-    "    # Optional: Add additional kwargs as needed\n",
-    "    authors=[{\"name\": \"Your Name\", \"affiliation\": \"Your Institution\"}],\n",
-    "    description=\"Micro-SAM model trained on microscopy images for segmentation\",\n",
-    "    license=\"MIT\",\n",
-    "    documentation=\"Model trained with micro-sam for segmenting microscopy images\",\n",
-    ")\n",
+    "val_images = sorted(os.listdir(val_input_path))\n",
+    "val_labels = sorted(os.listdir(val_label_path))\n",
     "\n",
-    "print(f\"BioImage.IO model exported to: {bioimageio_model_path}\")\n"
+    "if val_images and val_labels:\n",
+    "    test_image = imageio.imread(os.path.join(val_input_path, val_images[0]))\n",
+    "    test_label = imageio.imread(os.path.join(val_label_path, val_labels[0]))\n",
+    "    \n",
+    "    bioimageio_model_path = output_directory / \"bioimage_io_model\"\n",
+    "    \n",
+    "    # Find the best checkpoint\n",
+    "    checkpoint_dir = checkpoint_folder / model_name\n",
+    "    best_checkpoint = checkpoint_dir / \"best.pt\"\n",
+    "    \n",
+    "    if best_checkpoint.exists():\n",
+    "        export_sam_model(\n",
+    "            image=test_image,\n",
+    "            label_image=test_label,\n",
+    "            model_type=training_config[\"model_type\"],\n",
+    "            name=model_name,\n",
+    "            output_path=str(bioimageio_model_path),\n",
+    "            checkpoint_path=str(best_checkpoint),\n",
+    "            authors=[{\"name\": \"Your Name\", \"affiliation\": \"Your Institution\"}],\n",
+    "            description=\"Micro-SAM model trained on microscopy images\",\n",
+    "        )\n",
+    "        print(f\"BioImage.IO model exported to: {bioimageio_model_path}\")\n",
+    "    else:\n",
+    "        print(f\"Checkpoint not found at: {best_checkpoint}\")\n",
+    "else:\n",
+    "    print(\"No validation data available for model export.\")"
    ]
   },
   {
