--- a/notebooks/jupyter/training/omero-training_DL4mic.ipynb
+++ b/notebooks/jupyter/training/omero-training_DL4mic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare OMERO Data for BiaPy training\n",
+    "# DL4MicEverywhere Training from OMERO Data\n",
     "\n",
     "Train AI models using annotation tables from OMERO with automated data preparation."
    ]
@@ -27,7 +27,6 @@
     "    create_omero_connection_widget,\n",
     "    create_training_data_widget,\n",
     "    prepare_training_data_from_table,\n",
-    "\n",
     ")\n",
     "\n",
     "# Additional imports\n",
@@ -154,10 +153,9 @@
     "    training_result = prepare_training_data_from_table(\n",
     "        conn=conn,\n",
     "        table_id=selected_table_id,\n",
-    "        training_name= selected_table_info.get('name', f\"training_table_{selected_table_id}\"),\n",
+    "        training_name=selected_table_info.get('name', f\"training_table_{selected_table_id}\"),\n",
     "        output_dir=output_directory,\n",
-    "        clean_existing=True,\n",
-    "        verbose=False  # Set to True for detailed debug output\n",
+    "        clean_existing=True\n",
     "    )\n",
     "    \n",
     "    print(\"\\nTraining data preparation completed successfully!\")\n",
@@ -165,7 +163,6 @@
     "    for key, value in training_result['stats'].items():\n",
     "        print(f\"  {key}: {value}\")\n",
     "    \n",
-    "    # Store paths for later use in training\n",
     "    training_input_dir = training_result['training_input']\n",
     "    training_label_dir = training_result['training_label']\n",
     "    val_input_dir = training_result['val_input']\n",
@@ -176,17 +173,36 @@
     "    print(f\"  Training labels: {training_label_dir}\")\n",
     "    print(f\"  Validation images: {val_input_dir}\")\n",
     "    print(f\"  Validation labels: {val_label_dir}\")\n",
-    "\n",
-    "    #print path to paste in DL4MicEverywhere as WSL path replace D or c drive with /mnt/d or /mnt/c\n",
-    "    print(f\"\\nTo use this data for BiaPy training use the following paths:\")\n",
-    "    print(\"These paths can be pasted directly into the BiaPy input fields.\")\n",
-    "    print(f\"  Data folder: \\n /mnt/{training_input_dir.drive[:-1].lower()}{output_directory.as_posix()[2:]}\")\n",
+    "    \n",
     "    (output_directory / 'output').mkdir(parents=True, exist_ok=True)\n",
-    "    print(f\"  Output folder: \\n /mnt/{training_input_dir.drive[:-1].lower()}{(output_directory / 'output').as_posix()[2:]}\")\n",
-    "        \n",
+    "    print(f\"\\nPaths to use for DL4MicEverywhere training:\")\n",
+    "    print(f\"  Data folder: {output_directory}\")\n",
+    "    print(f\"  Output folder: {output_directory / 'output'}\")\n",
+    "    \n",
     "except Exception as e:\n",
     "    print(f\"Error during data preparation: {e}\")\n",
     "    raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configuration for DL4MicEverywhere\n",
+    "# Update the path to your local DL4MicEverywhere installation\n",
+    "dl4mic_folder = Path.home() / \"DL4MicEverywhere\"  # Update this path\n",
+    "dl4mic_notebook = \"Cellpose_2D_DL4Mic\"  # Update for your chosen notebook\n",
+    "with_gpu = True\n",
+    "\n",
+    "print(f\"\\nTo start training in DL4MicEverywhere, run the following command:\")\n",
+    "print(f\"  1. Open a terminal.\")\n",
+    "print(f\"  2. Navigate to the DL4MicEverywhere directory:\")\n",
+    "print(f\"     cd {dl4mic_folder}\")\n",
+    "print(f\"  3. Run the training script:\")\n",
+    "gpu_flag = \" -g\" if with_gpu else \"\"\n",
+    "print(f\"     bash Linux_launch.sh -c notebooks/ZeroCostDL4Mic_notebooks/{dl4mic_notebook}/configuration.yaml -d {output_directory} -o {output_directory / 'output'}{gpu_flag}\")"
    ]
   }
  ],
