--- a/notebooks/jupyter/training/omero-training_biapy.ipynb
+++ b/notebooks/jupyter/training/omero-training_biapy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DL4MicEverywhere Training from OMERO Data\n",
+    "# Prepare OMERO Data for BiaPy training\n",
     "\n",
     "Train AI models using annotation tables from OMERO with automated data preparation."
    ]
@@ -27,6 +27,7 @@
     "    create_omero_connection_widget,\n",
     "    create_training_data_widget,\n",
     "    prepare_training_data_from_table,\n",
+    "\n",
     ")\n",
     "\n",
     "# Additional imports\n",
@@ -123,7 +124,7 @@
     "# Create output directory for training\n",
     "timestamp = datetime.datetime.now().strftime('%Y%m%d_%H%M%S')\n",
     "home_dir = Path.home()\n",
-    "models_dir = home_dir / \"dl4mic_data\"\n",
+    "models_dir = home_dir / \"biapy_data\"\n",
     "models_dir.mkdir(exist_ok=True)\n",
     "\n",
     "folder_name = f\"training_data-{timestamp}\"\n",
@@ -153,9 +154,10 @@
     "    training_result = prepare_training_data_from_table(\n",
     "        conn=conn,\n",
     "        table_id=selected_table_id,\n",
-    "        training_name= selected_table_info.get('name', f\"training_table_{selected_table_id}\"),\n",
+    "        training_name=selected_table_info.get('name', f\"training_table_{selected_table_id}\"),\n",
     "        output_dir=output_directory,\n",
-    "        clean_existing=True\n",
+    "        clean_existing=True,\n",
+    "        verbose=False\n",
     "    )\n",
     "    \n",
     "    print(\"\\nTraining data preparation completed successfully!\")\n",
@@ -163,7 +165,6 @@
     "    for key, value in training_result['stats'].items():\n",
     "        print(f\"  {key}: {value}\")\n",
     "    \n",
-    "    # Store paths for later use in training\n",
     "    training_input_dir = training_result['training_input']\n",
     "    training_label_dir = training_result['training_label']\n",
     "    val_input_dir = training_result['val_input']\n",
@@ -174,42 +175,15 @@
     "    print(f\"  Training labels: {training_label_dir}\")\n",
     "    print(f\"  Validation images: {val_input_dir}\")\n",
     "    print(f\"  Validation labels: {val_label_dir}\")\n",
-    "\n",
-    "    #print path to paste in DL4MicEverywhere as WSL path replace D or c drive with /mnt/d or /mnt/c\n",
-    "    print(f\"\\nTo use this data for ZeroCostDL4Mic training use the following paths:\")\n",
-    "    print(\"These paths can be pasted directly into the ZeroCostDL4Mic input fields.\")\n",
-    "    training_input_folder_wsl = f\"/mnt/{training_input_dir.drive[:-1].lower()}{output_directory.as_posix()[2:]}\"\n",
-    "    print(f\"  Data folder: \\n {training_input_folder_wsl}\")\n",
+    "    \n",
     "    (output_directory / 'output').mkdir(parents=True, exist_ok=True)\n",
-    "    output_folder_wsl = f\"/mnt/{training_input_dir.drive[:-1].lower()}{(output_directory / 'output').as_posix()[2:]}\"\n",
-    "    print(f\"  Output folder: \\n {output_folder_wsl}\")\n",
-    "\n",
+    "    print(f\"\\nPaths to use for BiaPy training:\")\n",
+    "    print(f\"  Data folder: {output_directory}\")\n",
+    "    print(f\"  Output folder: {output_directory / 'output'}\")\n",
+    "    \n",
     "except Exception as e:\n",
     "    print(f\"Error during data preparation: {e}\")\n",
     "    raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Input\n",
-    "dl4mic_folder = Path(\"D:\\data\\Code\\DL4MicEverywhere\")\n",
-    "dl4mic_notebook = \"Cellpose_2D_DL4Mic\"\n",
-    "with_gpu = True\n",
-    "\n",
-    "#Print instructions to start training in DL4MicEverywhere\n",
-    "print(f\"\\nTo start training in ZeroCostDL4MicEverywhere, run the following command in a terminal:\")\n",
-    "print(f\"  1. Open a terminal (e.g., Anaconda Prompt).\")\n",
-    "print(f\"  2. Navigate to the ZeroCostDL4MicEverywhere directory:\")\n",
-    "print(f\"     cd {dl4mic_folder}\")\n",
-    "print(f\"  3. Run the training script with the appropriate configuration, data, and output paths:\")\n",
-    "if with_gpu:\n",
-    "    print(f\"     wsl bash Linux_launch.sh -c notebooks/ZeroCostDL4Mic_notebooks/{dl4mic_notebook}/configuration.yaml -d {training_input_folder_wsl} -o {output_folder_wsl} -g\")    \n",
-    "else:\n",
-    "    print(f\"     wsl bash Linux_launch.sh -c notebooks/ZeroCostDL4Mic_notebooks/{dl4mic_notebook}/configuration.yaml -d {training_input_folder_wsl} -o {output_folder_wsl}\")    \n"
    ]
   }
  ],
