feat: add download_annotation_config_from_omero function to retrieve YAML annotations
- Implemented download_annotation_config_from_omero to download and parse annotation config YAML from OMERO.
- Updated WorkflowWidget to save annotation config files with unique names based on the workflow name.
- Modified pyproject.toml to include 'all' in the dev environment.
- Added unit tests for download_annotation_config_from_omero to ensure correct behavior in various scenarios.

--- a/notebooks/jupyter/annotation/omero-annotate-ai-annotation-widget.ipynb
+++ b/notebooks/jupyter/annotation/omero-annotate-ai-annotation-widget.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +319,138 @@
       "Loaded 2D data shape: (50, 50)\n",
       "Image data range: 0 - 245, dtype: uint8\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Precompute state for files: 100%|██████████| 5/5 [00:38<00:00,  7.64s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precomputation took 40.97242736816406 seconds (= 00:41 minutes)\n",
+      "The first image to annotate is image number 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n",
+      "WARNING:vispy:Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Computed embeddings for the 'Light Microscopy' model of size 'base'.\n",
+      "Loading next image: at index 1\n",
+      "Loading next image: at index 2\n",
+      "Loading next image: at index 3\n",
+      "Loading next image: at index 4\n",
+      "   Annotation completed, got results: <class 'dict'>\n",
+      "   Processing annotation results...\n",
+      "Processing annotation results...\n",
+      "Found 5 annotation files for 5 metadata entries\n",
+      "Step 1: Loading label image from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00000.tif\n",
+      "Label image loaded: (50, 50), dtype: uint32\n",
+      "Found 2 unique labels: [0 1]...\n",
+      "Step 2: Converting labels to ROI shapes...\n",
+      "Created 1 ROI shapes from labels\n",
+      "Step 3: Uploading label file as attachment\n",
+      "File annotation uploaded with ID: 2102\n",
+      "Step 4: Uploading ROI shapes\n",
+      "Created 1 ROI shapes for image 287 with ID: 1\n",
+      "Uploaded annotations from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00000.tif to image 287\n",
+      "   Patch offset: (0, 0)\n",
+      "   File annotation ID: 2102\n",
+      "   ROI ID: 1\n",
+      "Uploaded ROI for annotation_id '287_0_0_0' (label_id: 2102, roi_id: 1)\n",
+      "Step 1: Loading label image from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00001.tif\n",
+      "Label image loaded: (50, 50), dtype: uint32\n",
+      "Found 2 unique labels: [0 1]...\n",
+      "Step 2: Converting labels to ROI shapes...\n",
+      "Created 1 ROI shapes from labels\n",
+      "Step 3: Uploading label file as attachment\n",
+      "File annotation uploaded with ID: 2103\n",
+      "Step 4: Uploading ROI shapes\n",
+      "Created 1 ROI shapes for image 144 with ID: 2\n",
+      "Uploaded annotations from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00001.tif to image 144\n",
+      "   Patch offset: (0, 0)\n",
+      "   File annotation ID: 2103\n",
+      "   ROI ID: 2\n",
+      "Uploaded ROI for annotation_id '144_0_0_0' (label_id: 2103, roi_id: 2)\n",
+      "Step 1: Loading label image from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00002.tif\n",
+      "Label image loaded: (50, 50), dtype: uint32\n",
+      "Found 3 unique labels: [0 1 2]...\n",
+      "Step 2: Converting labels to ROI shapes...\n",
+      "Created 2 ROI shapes from labels\n",
+      "Step 3: Uploading label file as attachment\n",
+      "File annotation uploaded with ID: 2104\n",
+      "Step 4: Uploading ROI shapes\n",
+      "Created 2 ROI shapes for image 124 with ID: 3\n",
+      "Uploaded annotations from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00002.tif to image 124\n",
+      "   Patch offset: (0, 0)\n",
+      "   File annotation ID: 2104\n",
+      "   ROI ID: 3\n",
+      "Uploaded ROI for annotation_id '124_0_0_0' (label_id: 2104, roi_id: 3)\n",
+      "Step 1: Loading label image from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00003.tif\n",
+      "Label image loaded: (50, 50), dtype: uint32\n",
+      "Found 4 unique labels: [0 1 2 3]...\n",
+      "Step 2: Converting labels to ROI shapes...\n",
+      "Created 3 ROI shapes from labels\n",
+      "Step 3: Uploading label file as attachment\n",
+      "File annotation uploaded with ID: 2105\n",
+      "Step 4: Uploading ROI shapes\n",
+      "Created 3 ROI shapes for image 135 with ID: 4\n",
+      "Uploaded annotations from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00003.tif to image 135\n",
+      "   Patch offset: (0, 0)\n",
+      "   File annotation ID: 2105\n",
+      "   ROI ID: 4\n",
+      "Uploaded ROI for annotation_id '135_0_0_0' (label_id: 2105, roi_id: 4)\n",
+      "Step 1: Loading label image from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00004.tif\n",
+      "Label image loaded: (50, 50), dtype: uint32\n",
+      "Found 2 unique labels: [0 1]...\n",
+      "Step 2: Converting labels to ROI shapes...\n",
+      "Created 1 ROI shapes from labels\n",
+      "Step 3: Uploading label file as attachment\n",
+      "File annotation uploaded with ID: 2106\n",
+      "Step 4: Uploading ROI shapes\n",
+      "Created 1 ROI shapes for image 251 with ID: 5\n",
+      "Uploaded annotations from /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotations/seg_00004.tif to image 251\n",
+      "   Patch offset: (0, 0)\n",
+      "   File annotation ID: 2106\n",
+      "   ROI ID: 5\n",
+      "Uploaded ROI for annotation_id '251_0_0_0' (label_id: 2106, roi_id: 5)\n",
+      "Updated 5/5 annotations\n",
+      "Config now has 5/5 processed annotations\n",
+      "   Config state after: 5/5 processed\n",
+      "   Updating OMERO table...\n",
+      "Updating OMERO table...\n",
+      "Deleting table: testscreen_20260218_183216\n",
+      "Deleting table: testscreen_20260218_183216\n",
+      "Successfully deleted table 2101\n",
+      "Created/replaced tracking table 'testscreen_20260218_183216' with 5 units\n",
+      "   Primary container: screen 13\n",
+      "   Table ID: 2107\n",
+      "OMERO table updated successfully (ID: 2107)\n",
+      "   OMERO table updated (ID: 2107)\n",
+      "   Auto-saving config...\n",
+      "Configuration saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config.yaml\n",
+      "Config state saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config.yaml\n",
+      "   Config saved\n",
+      "Configuration saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config.yaml\n",
+      "Config state saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config.yaml\n",
+      "Workflow completed successfully! Processed 5 units\n",
+      "Annotation pipeline completed successfully.\n",
+      "Tracking table ID: 2107\n",
+      "Annotations uploaded to OMERO\n",
+      "Total images processed: 5\n"
+     ]
     }
    ],
    "source": [
@@ -358,9 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config_testscreen_20260218_183216.yaml\n",
+      "Configuration saved to: /var/home/maartenpaul/omero_annotate_ai/26omero_annotations/annotation_config_testscreen_20260218_183216.yaml\n",
+      "To reuse this configuration:\n",
+      "from omero_annotate_ai import load_config\n",
+      "config = load_config('annotation_config_testscreen_20260218_183216.yaml')\n"
+     ]
+    }
+   ],
    "source": [
     "# Export configuration for future use\n",
     "config_filename = f\"annotation_config_{config.name}.yaml\"\n",
@@ -389,9 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OMERO connection closed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Close OMERO connection (optional, but recommended)\n",
     "if 'conn' in locals() and conn is not None:\n",
